# inspiral

./: CMakeLists.txt  README.md  config.json
include/: aabb.hpp  camera.hpp  config.hpp  file.hpp  light.hpp  material.hpp  mouse.hpp  object.hpp  opengl-helpers.hpp  ray.hpp  render.hpp  scene.hpp  shader.hpp
shaders/: fragment.glsl
src/: aabb.cpp  camera.cpp  config.cpp  entry.cpp  file.cpp  keyboard.cpp  mouse.cpp  opengl-helpers.cpp  ray.cpp  render.cpp  scene.cpp  shader.cpp  ui.cpp
